tests/snapshots/snapshots__budget_typeguard_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 1 (13 words)

docs/conf.py
src/typeguard/__init__.py
src/typeguard/_checkers.py
src/typeguard/_config.py
src/typeguard/_decorators.py
src/typeguard/_exceptions.py
src/typeguard/_functions.py
src/typeguard/_importhook.py
src/typeguard/_memo.py
src/typeguard/_pytest_plugin.py
src/typeguard/_suppression.py
src/typeguard/_transformer.py
src/typeguard/_utils.py
